--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@ body {
 }
 
 .App {
-  --default-font-size: min(4vmax, 7vmin, 40px);
+  --box-size: min(8vw, 5.5vh);
+  --default-font-size: calc(var(--box-size) * 0.9);
   --dark-color: rgb(55 54 71);
   --light-color: rgb(239 239 239);
 
@@ -38,7 +39,7 @@ button {
   text-decoration: none;
   text-align: center;
   appearance: none;
-  font-size: var(--default-font-size);
+  font-size: calc(var(--default-font-size) * 0.75);
   font-family: sans-serif;
   background-color: var(--light-color);
   border: 1px solid var(--light-color);
@@ -132,7 +133,7 @@ input[type="range"]:focus::-ms-fill-upper {
 
 #numLetters-info {
   color: var(--light-color);
-  font-size: calc(var(--default-font-size) / 1);
+  font-size: var(--default-font-size);
   padding: 0 1vh;
   justify-content: center;
   align-items: center;
@@ -151,7 +152,7 @@ input[type="range"]:focus::-ms-fill-upper {
   align-items: center;
   grid-area: controls;
   width: 100%;
-  height: 5vh;
+  height: calc(var(--box-size) * 1.2);
   border-bottom: 2px solid var(--light-color);
 }
 
@@ -197,6 +198,17 @@ input[type="range"]:focus::-ms-fill-upper {
 
 #installButton {
   background-image: url("./images/install.svg");
+}
+
+.settings {
+  text-align: center;
+  overflow: scroll;
+  font-size: calc(var(--default-font-size) * 0.75);
+  justify-items: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 #settings {
@@ -248,8 +260,6 @@ a {
     auto
     auto
     1fr;
-
-  --box-size: calc(min(8vw, 5.5vh));
 }
 
 #crossjig #board {
@@ -349,17 +359,6 @@ a {
   align-items: center;
 }
 
-.settings {
-  text-align: center;
-  overflow: scroll;
-  font-size: calc(var(--default-font-size) * 0.75);
-  justify-items: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
 #rulesHeader {
   grid-area: header;
 }
@@ -406,14 +405,13 @@ a {
   flex-direction: column;
 }
 
-/* Landscape */
+/* Landscape, small screen */
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 800px) {
   #crossjig {
     grid-template-areas: "board pool controls";
     grid-template-columns: auto 1fr auto;
     grid-template-rows: 1fr;
-    --box-size: calc(min(5.5vw, 8vh));
   }
 
   #crossjig #board {
@@ -439,6 +437,21 @@ a {
     border-width: 0 0 0 2px;
     align-items: center;
     height: 100%;
-    width: 7vw;
+  }
+}
+
+/* Large screen */
+@media (min-height: 800px) and (min-width: 800px) {
+  .App {
+    --box-size: min(4vh, 7vw, 1cm);
+  }
+
+  #controls {
+    justify-content: center;
+  }
+
+  #settings,
+  #setting-buttons {
+    width: fit-content;
   }
 }
