change margin to padding on pool piece to make movement more seamless when dropping in between pieces

--- a/src/App.css
+++ b/src/App.css
@@ -339,7 +339,7 @@ a {
   font-size: var(--default-font-size);
   width: fit-content;
   height: 100%;
-  margin: 3vmin;
+  padding: 3vmin;
   align-content: center;
 }
 
