--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ button:disabled {
 #pool::-webkit-scrollbar {
   -webkit-appearance: none;
   height: 1vh;
-  background-color: lightgray;
+  background-color: transparent;
   border-radius: 5px;
 }
 
@@ -353,12 +353,14 @@ a {
 #pool {
   grid-area: pool;
   width: 100%;
-  height: 100%;
+  height: calc(98vh - (var(--box-size) * 12) - (var(--box-size) * 1.2));
   display: flex;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
   flex-direction: row;
-  min-height: calc(3 * var(--box-size));
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .poolPiece {
@@ -368,7 +370,6 @@ a {
   justify-content: center;
   font-size: var(--default-font-size);
   width: fit-content;
-  height: 100%;
   padding: 3vmin;
   align-content: center;
 }
@@ -498,8 +499,8 @@ a {
 
 @media (orientation: landscape) and (max-width: 800px) {
   #crossjig {
-    grid-template-areas: "game controls";
-    grid-template-columns: 1fr auto;
+    grid-template-areas: "controls game";
+    grid-template-columns: auto 1fr;
     grid-template-rows: 1fr;
   }
 
@@ -507,9 +508,8 @@ a {
     display: grid;
     grid-area: game;
     grid-template-areas: 
-      "board"
-      "pool";
-    grid-template-rows: auto 1fr;
+      "board pool";
+    grid-template-columns: auto 1fr;
   }
 
   #board {
@@ -518,21 +518,17 @@ a {
   }
 
   #pool {
-    flex-direction: column;
-    overflow-y: scroll;
-    overflow-x: hidden;
     height: 100vh;
   }
 
   .poolPiece {
     height: fit-content;
-    width: 100%;
   }
 
   #controls {
     flex-direction: column;
     border: solid var(--light-color);
-    border-width: 0 0 0 2px;
+    border-width: 0 2px 0 0;
     align-items: center;
     height: 100%;
   }
