shorten calender width in landscape

--- a/src/App.css
+++ b/src/App.css
@@ -540,6 +540,10 @@ a {
     width: fit-content;
     white-space: nowrap;
   }
+
+  #calendarButton {
+    width: var(--default-font-size);
+  }
 }
 
 /* Large screen */
