Fix bug clicking "through" transparent part of a piece
Without this, the pointerdown event is delivered to the piece,
which doesn't handle it; then it bubbles up to the board, initiating a
"shift". What we want is for the click to go through the transparent part
of the piece to the letter beneath it.

--- a/src/App.css
+++ b/src/App.css
@@ -321,6 +321,7 @@ a {
 
 .letter {
   display: flex;
+  pointer-events: auto;
   touch-action: none;
   align-items: center;
   justify-content: center;
@@ -372,6 +373,7 @@ a {
 .piece {
   display: grid;
   touch-action: none;
+  pointer-events: none;
   grid-template-columns: repeat(var(--numCols), var(--box-size));
   grid-template-rows: repeat(var(--numRows), var(--box-size));
   justify-content: center;
