Make the drag group cast a shadow on the board.
This makes it easier to see what's going to happen if you drop the
pieces right now.

--- a/src/App.css
+++ b/src/App.css
@@ -409,6 +409,10 @@ a {
   transform: translate(var(--lift), var(--lift));
 }
 
+.placeholder {
+  background-color: var(--shadow-color);
+}
+
 .rules {
   display: grid;
   grid-template-areas:
