Refactor the drop shadow.

--- a/src/App.css
+++ b/src/App.css
@@ -409,7 +409,16 @@ a {
   transform: translate(var(--lift), var(--lift));
 }
 
-.placeholder {
+.shadow-piece {
+  width: fit-content;
+  height: fit-content;
+  display: grid;
+  grid-template-columns: repeat(12, var(--box-size));
+  grid-template-rows: repeat(12, var(--box-size));
+  pointer-events: none;
+}
+
+.shadow-square {
   background-color: var(--shadow-color);
 }
 
