Disable text selection to fix Android Chrome
In Chrome, a long press selects text, so the lack of this property
was causing pointercancel events as the browser took over.
Happily we don't want this text to be selectable anyway. It's
common to accidentally (and uselessly) select all the letters in the
browser, too.

--- a/src/App.css
+++ b/src/App.css
@@ -322,6 +322,7 @@ a {
 .letter {
   display: flex;
   pointer-events: auto;
+  user-select: none;
   touch-action: none;
   align-items: center;
   justify-content: center;
