Make dragGroup a reasonable size.
Previously it was the size of the whole board, which shouldn't cause any
problems but was weird.

--- a/src/App.css
+++ b/src/App.css
@@ -396,8 +396,8 @@ a {
 #dragGroup {
   display: grid;
   touch-action: none;
-  grid-template-columns: repeat(12, var(--box-size));
-  grid-template-rows: repeat(12, var(--box-size));
+  grid-template-columns: repeat(var(--group-columns), var(--box-size));
+  grid-template-rows: repeat(var(--group-rows), var(--box-size));
   width: fit-content;
   height: fit-content;
 }
