Rename dragGroup -> drag-group.
There is not a clear convention either way in the project, but I could
at least be consistent within this one PR.

--- a/src/App.css
+++ b/src/App.css
@@ -393,7 +393,7 @@ a {
   padding: 3vmin;
 }
 
-#dragGroup {
+#drag-group {
   display: grid;
   touch-action: none;
   grid-template-columns: repeat(var(--group-columns), var(--box-size));
