--- a/src/App.css
+++ b/src/App.css
@@ -301,6 +301,8 @@ a {
     "board"
     "pool";
   grid-template-rows: auto 1fr;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 #board {
@@ -322,7 +324,6 @@ a {
 .letter {
   display: flex;
   pointer-events: auto;
-  user-select: none;
   touch-action: none;
   align-items: center;
   justify-content: center;
