Revert 62a6075 as it is quite broken in Safari.

--- a/src/App.css
+++ b/src/App.css
@@ -368,7 +368,7 @@ a {
   overflow-y: scroll;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: safe center;
+  align-items: center;
   justify-content: center;
 }
 
