Remove unnecessary `dragging` class from letters.
The transform cannot be applied to the `#drag-group` as a whole
because, unfortunately, `dragStart()` uses the bounding rectangles
of `.piece` elements to compute `pointerOffset`. Changing the
positioning of the pieces would affect that logic, but doing it
to the `.letter`s only does not.

--- a/src/App.css
+++ b/src/App.css
@@ -403,17 +403,17 @@ a {
   height: fit-content;
 }
 
+#drag-group .letter {
+  background-color: var(--drag-color);
+  --lift: calc(var(--box-size) * -0.08);
+  transform: translate(var(--lift), var(--lift));
+}
+
 #result {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-}
-
-.dragging {
-  --lift: calc(var(--box-size) * -0.08);
-  background-color: var(--drag-color);
-  transform: translate(var(--lift), var(--lift));
 }
 
 .shadow-square {
