--- a/src/App.css
+++ b/src/App.css
@@ -53,18 +53,18 @@ button {
 }
 
 button:disabled {
-  opacity: 50%;
+  opacity: 0.5;
 }
 
 #pool::-webkit-scrollbar {
-  -webkit-appearance: none;
+  appearance: none;
   height: 1vh;
   background-color: transparent;
   border-radius: 5px;
 }
 
 #pool::-webkit-scrollbar-thumb {
-  background: rgb(127, 125, 125);
+  background: rgb(127 125 125);
   border-radius: 5px;
 }
 
@@ -241,8 +241,9 @@ input[type="range"]:focus::-ms-fill-upper {
 }
 
 #calendarButton {
-  background-image: url("./images/daily.svg"),
-    radial-gradient(circle, rgba(239, 239, 239, 0.6) 30%, rgba(55, 54, 71));
+  background-image:
+    url("./images/daily.svg"),
+    radial-gradient(circle, rgb(239 239 239 / 60%) 30%, rgb(55 54 71));
   width: calc(var(--default-font-size) * 2);
 }
 
@@ -316,17 +317,20 @@ a {
 
 #game {
   display: grid;
-  --box-size: min(
-    calc((66vh - 1px) / var(--grid-rows)),
-    calc((96vw - 1px) / var(--grid-columns))
-  );
+
+  --box-size:
+    min(
+      calc((66vh - 1px) / var(--grid-rows)),
+      calc((96vw - 1px) / var(--grid-columns))
+    );
+
   grid-area: game;
   grid-template-areas:
     "board"
     "pool";
   grid-template-rows: auto 1fr;
   user-select: none;
-  -webkit-user-select: none;
+  user-select: none;
 }
 
 #board,
@@ -353,7 +357,6 @@ a {
   box-sizing: border-box;
   width: calc(var(--box-size) + 1px);
   height: calc(var(--box-size) + 1px);
-
   display: flex;
   pointer-events: auto;
   touch-action: none;
@@ -383,7 +386,7 @@ a {
   width: 10%;
   height: 100%;
   background-color: var(--light-color);
-  opacity: 15%;
+  opacity: 0.15;
 }
 
 .letter.horizontalValid:not(.filled)::after {
@@ -394,7 +397,7 @@ a {
   height: 10%;
   width: 100%;
   background-color: var(--light-color);
-  opacity: 15%;
+  opacity: 0.15;
 }
 
 .letter-border {
@@ -423,12 +426,14 @@ a {
 #pool {
   grid-area: pool;
   width: 100%;
-  height: calc(
-    88vh - (var(--grid-rows) * var(--box-size) + 1px) - (var(--box-size) * 1.2)
-  );
-  height: calc(
-    98svh - (var(--grid-rows) * var(--box-size) + 1px) - (var(--box-size) * 1.2)
-  );
+  height:
+    calc(
+      88vh - (var(--grid-rows) * var(--box-size) + 1px) - (var(--box-size) * 1.2)
+    );
+  height:
+    calc(
+      98svh - (var(--grid-rows) * var(--box-size) + 1px) - (var(--box-size) * 1.2)
+    );
   display: flex;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -465,6 +470,7 @@ a {
 #drag-group .letter,
 #drag-group .letter-border {
   --lift: calc(var(--box-size) * -0.08);
+
   transform: translate(var(--lift), var(--lift));
 }
 
@@ -586,6 +592,7 @@ body:has(#drag-group) {
   width: calc(var(--default-font-size) * 1);
   padding: 0 2vw;
 }
+
 .statsBar > .statsWon {
   background-color: var(--light-color);
   height: calc(var(--default-font-size) * 1.2);
@@ -595,6 +602,7 @@ body:has(#drag-group) {
   text-align: center;
   margin: 1vh 0;
 }
+
 .statsNumber > .number {
   font-size: calc(var(--default-font-size) * 1.5);
 }
@@ -658,11 +666,12 @@ body:has(#drag-group) {
   }
 
   #game {
-    --box-size: min(
-      calc((48vh - 1px) / var(--grid-rows)),
-      calc((84vw - 1px) / var(--grid-columns)),
-      1cm
-    );
+    --box-size:
+      min(
+        calc((48vh - 1px) / var(--grid-rows)),
+        calc((84vw - 1px) / var(--grid-columns)),
+        1cm
+      );
   }
 
   #controls {
