--- a/src/App.css
+++ b/src/App.css
@@ -606,7 +606,7 @@ body:has(#drag-group) {
 
 /* Landscape, small screen */
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 935px) {
   #crossjig {
     grid-template-areas: "controls game";
     grid-template-columns: auto 1fr;
@@ -652,10 +652,14 @@ body:has(#drag-group) {
   }
 }
 
-/* Large screen */
-@media (min-height: 800px) and (min-width: 800px) {
+/* Large screen, landscape */
+@media (orientation: landscape) and (min-height: 600px) and (min-width: 936px) {
   html {
     --default-box-size: min(4vh, 7vw, 1cm);
+  }
+
+  .App {
+    justify-items: center;
   }
 
   #game {
@@ -667,12 +671,37 @@ body:has(#drag-group) {
       );
   }
 
-  #controls {
+  #controls,
+  #exitDaily {
     justify-content: center;
   }
 
   #settings,
   #setting-buttons {
     width: fit-content;
+  }
+
+  #pool {
+    width: min(calc((var(--grid-columns) * var(--box-size) * 2)), 80vw);
+  }
+
+  #rulesText {
+    width: 50vw;
+  }
+}
+
+/* Large screen, portrait */
+@media (orientation: portrait) and (min-height: 600px) and (min-width: 600px) {
+  html {
+    --default-box-size: min(4vh, 7vw, 1cm);
+  }
+
+  #game {
+    --box-size:
+      min(
+        calc((48vh - 1px) / var(--grid-rows)),
+        calc((84vw - 1px) / var(--grid-columns)),
+        1cm
+      );
   }
 }
