add button to access custom creation mode

--- a/src/styles/ControlBar.css
+++ b/src/styles/ControlBar.css
@@ -39,6 +39,10 @@
   background-image: url("../images/icons/heart.svg");
 }
 
+#customButton {
+  background-image: url("../images/icons/custom.svg");
+}
+
 #calendarButton {
   background-image:
     url("../images/icons/daily.svg"),
