--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -109,7 +109,8 @@ button:disabled {
   border-bottom: 2px solid var(--light-color);
 }
 
-#game, #custom {
+#game,
+#custom {
   display: grid;
 
   --box-size:
